# hyperpath

./: Cargo.toml  README.md  resources.txt
benches/: path_predicates.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bezier_arrangement.rs  cam_pocket_link.rs  explicit_arc_arrangement.rs  line_arc_arrangement.rs  line_arrangement.rs  pcb_circular_board.rs  pcb_convex_pad.rs  pcb_obround_pad.rs  pcb_oriented_rect_pad.rs  pcb_orthogonal_pad.rs  pcb_rounded_rect_pad.rs  rectangular_prism_mesh_boolean.rs  routing_feed.rs  routing_keepout.rs  specctra_route_text.rs
src/: arc.rs  arrangement.rs  bezier.rs  bezier_arrangement.rs  cam.rs  lib.rs  mesh_boolean.rs  mesh_boolean_cam.rs  mesh_boolean_handoff.rs  mesh_boolean_holes.rs  mesh_boolean_pcb.rs  mesh_boolean_polygon.rs  mesh_boolean_program.rs  mesh_boolean_sources.rs  mixed_bezier_arrangement.rs  mixed_conic_arrangement.rs  mixed_cubic_arrangement.rs  offset.rs  pcb.rs  pcb_circular_board.rs  pcb_convex_pad.rs  pcb_obround_pad.rs  pcb_oriented.rs  pcb_orthogonal_pad.rs  ph.rs  provenance.rs  routing.rs  segment.rs  solve.rs  specctra.rs  specctra_syntax.rs  swept.rs  tangent.rs
src/cam/: pocket_link.rs
src/routing/: feed.rs  jerk_schedule.rs  lookahead.rs  orthogonal_keepout.rs
tests/: path_primitives.rs
