[package]
name = "hyperpath"
version = "0.2.0"
edition = "2024"

[dependencies]
hyperlimit = { version = "0.3.0", default-features = false }
hyperreal = { version = "0.12.0", default-features = false }
hypersolve = { version = "0.2.0", default-features = false }
[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"

[[bench]]
name = "path_predicates"
harness = false
