[package]
name = "hyperpath"
version = "0.2.0"
edition = "2024"
description = "Exact-aware path predicates and route constraints for the Hyper ecosystem"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hyperpath"
readme = "README.md"
keywords = ["paths", "routing", "constraints", "hyperreal", "cad"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
# Hyper ecosystem dependencies: keep the crate-official release references and
# the commented workspace references below. Switch to the workspace form for
# local development, then switch back to crates.io versions before publishing.
hyperlimit = { version = "0.3.0", default-features = false }
hyperreal = { version = "0.12.0", default-features = false }
hypersolve = { version = "0.2.0", default-features = false }
# hyperlimit = { path = "../hyperlimit", default-features = false }
# hyperreal = { path = "../hyperreal", default-features = false }
# hypersolve = { path = "../hypersolve", default-features = false }
[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"

[[bench]]
name = "path_predicates"
harness = false
