[package]
name = "hyperpath"
version = "0.3.0"
edition = "2024"
description = "Exact-aware path predicates and route constraints for the Hyper ecosystem"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/timschmidt/hyperpath"
readme = "README.md"
keywords = ["paths", "routing", "constraints", "hyperreal", "cad"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hyperlimit = { path = "../hyperlimit", default-features = false }
hypermesh = { path = "../hypermesh", default-features = false, features = ["exact-triangulation"] }
hyperreal = { path = "../hyperreal", default-features = false }
hypersolve = { path = "../hypersolve", default-features = false }
# hyperlimit = { version = "0.4.0", default-features = false }
# hypermesh = { version = "0.3.0", default-features = false, features = ["exact-triangulation"] }
# hyperreal = { version = "0.13.0", default-features = false }
# hypersolve = { version = "0.3.0", default-features = false }
[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"

[[bench]]
name = "path_predicates"
harness = false
