[package]
name = "hyperpath-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hyperpath = { path = ".." }
libfuzzer-sys = "0.4"

[[bin]]
name = "specctra_route_text"
path = "fuzz_targets/specctra_route_text.rs"
test = false
doc = false
bench = false
