[package]
name = "hyperpath-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hyperlimit = { path = "../../hyperlimit" }
hyperpath = { path = ".." }
hyperreal = { path = "../../hyperreal" }
libfuzzer-sys = "0.4"

[[bin]]
name = "specctra_route_text"
path = "fuzz_targets/specctra_route_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pcb_rounded_rect_pad"
path = "fuzz_targets/pcb_rounded_rect_pad.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pcb_oriented_rect_pad"
path = "fuzz_targets/pcb_oriented_rect_pad.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pcb_circular_board"
path = "fuzz_targets/pcb_circular_board.rs"
test = false
doc = false
bench = false
